--- a/package.json
+++ b/package.json
@@ -1,48 +1,76 @@
 {
-  "name": "angular",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "core-js": "^3.6.4",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "^0.10.3"
-  },
+  "name": "ng2-canvas-whiteboard",
+  "version": "3.1.1",
+  "description": "A Canvas component for Angular which supports free drawing.",
+  "main": "./bundles/ng2-canvas-whiteboard.umd.js",
+  "module": "./modules/ng2-canvas-whiteboard.es5.js",
+  "es2015": "./modules/ng2-canvas-whiteboard.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "node build.js",
+    "pack-lib": "npm pack ./dist",
+    "publish-lib": "npm publish ./dist",
+    "transpile": "ngc -p ./tsconfig.json"
+  },
+  "typings": "./ng2-canvas-whiteboard.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WebFactoryMk/ng2-canvas-whiteboard.git"
+  },
+  "author": "webfactory",
+  "license": "MIT",
+  "keywords": [
+    "angular2",
+    "angular",
+    "angular4",
+    "angular5",
+    "angular6",
+    "angular7",
+    "angular8",
+    "angular9",
+    "canvas",
+    "drawing",
+    "touch drawing",
+    "whiteboard",
+    "colorpicker",
+    "canvas colorpicker",
+    "free hand drawing",
+    "shape drawing",
+    "shapes",
+    "premade shapes",
+    "custom shapes",
+    "custom premade shapes"
+  ],
+  "peerDependencies": {
+    "rxjs": "^6.0.0"
+  },
+  "dependencies": {
+    "lodash": "4.17.13"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "@angular/animations": "^9.0.1",
+    "@angular/common": "^9.0.1",
+    "@angular/compiler": "^9.0.1",
+    "@angular/compiler-cli": "^9.0.1",
+    "@angular/core": "^9.0.1",
+    "@angular/platform-browser": "^9.0.1",
+    "@angular/platform-browser-dynamic": "^9.0.1",
+    "@angular/platform-server": "^9.0.1",
+    "@types/lodash": "4.14.149",
+    "@types/node": "13.7.2",
+    "chalk": "1.1.3",
+    "core-js": "^3.6.4",
+    "reflect-metadata": "^0.1.13",
+    "rollup": "0.41.6",
+    "rxjs": "^6.5.4",
+    "shelljs": "0.7.7",
+    "sorcery": "0.10.0",
+    "ts-helpers": "1.1.2",
+    "ts-loader": "2.0.3",
+    "tsickle": "^0.38.0",
+    "typescript": "^3.7.5",
+    "uglify-js": "^2.8.15",
+    "webpack": "2.3.1",
+    "yargs": "7.0.2",
+    "zone.js": "^0.10.2"
   }
 }
